Fix the bug where banner image cropped in mobile.

--- a/themes/sosnpr/sass/scss_pages/_about.scss
+++ b/themes/sosnpr/sass/scss_pages/_about.scss
@@ -9,6 +9,7 @@
     width: 100vw;
     display: flex;
     justify-content: center;
+    margin-top: 40px;
     // align-items: center;
     .post-13{
       padding-top: 50px;
